--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-failed">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,26 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods, 2 failed,   3 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Suite">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC_003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(laksh@yahoo.com, Lakshmi, Invalid)">verify_loginDDT(laksh@yahoo.com, Lakshmi, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC_003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(lakshmi@yahoo.com, Laxmi, Invalid)">verify_loginDDT(lakshmi@yahoo.com, Laxmi, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite -->
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -122,17 +103,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC_003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(pavanoltraining@gmail.com, test@123, Valid)">verify_loginDDT(pavanoltraining@gmail.com, test@123, Valid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC_003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(laks@yahoo.com, xyz, Invalid)">verify_loginDDT(laks@yahoo.com, xyz, Invalid)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC_003_LoginDDT" class="method navigator-link" hash-for-method="verify_loginDDT(abc123@gmail.com, test@123, Valid)">verify_loginDDT(abc123@gmail.com, test@123, Valid)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC_005_Searching" class="method navigator-link" hash-for-method="searchtest">searchtest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -147,68 +118,17 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">testCases.TC_003_LoginDDT</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verify_loginDDT(laksh@yahoo.com, Lakshmi, Invalid)">
-                  </a> <!-- verify_loginDDT(laksh@yahoo.com, Lakshmi, Invalid) -->
-                  <span class="method-name">verify_loginDDT</span>
-                  <span class="parameters">(laksh@yahoo.com,Lakshmi,Invalid)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at testCases.TC_003_LoginDDT.verify_loginDDT(TC_003_LoginDDT.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verify_loginDDT(lakshmi@yahoo.com, Laxmi, Invalid)">
-                  </a> <!-- verify_loginDDT(lakshmi@yahoo.com, Laxmi, Invalid) -->
-                  <span class="method-name">verify_loginDDT</span>
-                  <span class="parameters">(lakshmi@yahoo.com,Laxmi,Invalid)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at testCases.TC_003_LoginDDT.verify_loginDDT(TC_003_LoginDDT.java:63)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC_003_LoginDDT</span>
+              <span class="class-name">testCases.TC_005_Searching</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verify_loginDDT(pavanoltraining@gmail.com, test@123, Valid)">
-                  </a> <!-- verify_loginDDT(pavanoltraining@gmail.com, test@123, Valid) -->
-                  <span class="method-name">verify_loginDDT</span>
-                  <span class="parameters">(pavanoltraining@gmail.com,test@123,Valid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verify_loginDDT(laks@yahoo.com, xyz, Invalid)">
-                  </a> <!-- verify_loginDDT(laks@yahoo.com, xyz, Invalid) -->
-                  <span class="method-name">verify_loginDDT</span>
-                  <span class="parameters">(laks@yahoo.com,xyz,Invalid)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verify_loginDDT(abc123@gmail.com, test@123, Valid)">
-                  </a> <!-- verify_loginDDT(abc123@gmail.com, test@123, Valid) -->
-                  <span class="method-name">verify_loginDDT</span>
-                  <span class="parameters">(abc123@gmail.com,test@123,Valid)</span>
+                  <a name="searchtest">
+                  </a> <!-- searchtest -->
+                  <span class="method-name">searchtest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,7 +150,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;linux&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC_003_LoginDDT&quot;/&gt;
+      &lt;class name=&quot;testCases.TC_005_Searching&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -270,32 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verify_loginDDT')
-data.setCell(0, 2, 'testCases.TC_003_LoginDDT')
-data.setCell(0, 3, 10767);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verify_loginDDT')
-data.setCell(1, 2, 'testCases.TC_003_LoginDDT')
-data.setCell(1, 3, 1760);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verify_loginDDT')
-data.setCell(2, 2, 'testCases.TC_003_LoginDDT')
-data.setCell(2, 3, 1745);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verify_loginDDT')
-data.setCell(3, 2, 'testCases.TC_003_LoginDDT')
-data.setCell(3, 3, 1269);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verify_loginDDT')
-data.setCell(4, 2, 'testCases.TC_003_LoginDDT')
-data.setCell(4, 3, 1002);
+data.setCell(0, 1, 'searchtest')
+data.setCell(0, 2, 'testCases.TC_005_Searching')
+data.setCell(0, 3, 324);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 324 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -321,38 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC_003_LoginDDT</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC_005_Searching</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(linux, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verify_loginDDT(pavanoltraining@gmail.com, test@123, Valid)</span>
-                <span class="method-start">2304 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">verify_loginDDT(lakshmi@yahoo.com, Laxmi, Invalid)</span>
-                <span class="method-start">4057 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">verify_loginDDT(laksh@yahoo.com, Lakshmi, Invalid)</span>
-                <span class="method-start">5436 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verify_loginDDT(laks@yahoo.com, xyz, Invalid)</span>
-                <span class="method-start">6534 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verify_loginDDT(abc123@gmail.com, test@123, Valid)</span>
-                <span class="method-start">17303 ms</span>
+                <span class="method-name">searchtest</span>
+                <span class="method-start">1666 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">19065 ms</span>
+                <span class="method-start">2002 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
