--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\BALAJI\new_workspace\Selenium_project\master.xml</span>
+                    <span>C:\Users\BALAJI\new_workspace\Selenium_project2\master.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.TC_005_Searching" class="method navigator-link" hash-for-method="searchtest">searchtest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.TC006_addtocart" class="method navigator-link" hash-for-method="addtocart">addtocart</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC_005_Searching</span>
+              <span class="class-name">testCases.TC006_addtocart</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="searchtest">
-                  </a> <!-- searchtest -->
-                  <span class="method-name">searchtest</span>
+                  <a name="addtocart">
+                  </a> <!-- addtocart -->
+                  <span class="method-name">addtocart</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\BALAJI\new_workspace\Selenium_project\master.xml</span>
+            <span class="header-content">C:\Users\BALAJI\new_workspace\Selenium_project2\master.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -150,7 +150,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;linux&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC_005_Searching&quot;/&gt;
+      &lt;class name=&quot;testCases.TC006_addtocart&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -192,14 +192,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'searchtest')
-data.setCell(0, 2, 'testCases.TC_005_Searching')
-data.setCell(0, 3, 324);
+data.setCell(0, 1, 'addtocart')
+data.setCell(0, 2, 'testCases.TC006_addtocart')
+data.setCell(0, 3, 757);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 324 ms</span>
+              <span class="suite-total-time">Total running time: 757 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -225,18 +225,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC_005_Searching</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC006_addtocart</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(linux, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">searchtest</span>
-                <span class="method-start">1666 ms</span>
+                <span class="method-name">addtocart</span>
+                <span class="method-start">1704 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">2002 ms</span>
+                <span class="method-start">2468 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
