--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.TC_001_AccountRegistrationtTest</td>
+<td>testCases.TC006_addtocart</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_account_Registration</td>
-<td>Master Regression </td>
-</tr>
+<td>addtocart</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
