--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,4 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC_001_AccountRegistrationtTest.test_account_Registration()[pri:0, instance:testCases.TC_001_AccountRegistrationtTest@4a9e6faf]<br/></td></tr>
-<tr><td>Regression</td><td>TC_001_AccountRegistrationtTest.test_account_Registration()[pri:0, instance:testCases.TC_001_AccountRegistrationtTest@4a9e6faf]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
